--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "license": "MIT",
   "dependencies": {
     "rxjs": "^6.2.2",
+    "yargs": "^12.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^10.7.1",
+    "@types/yargs": "^11.1.1",
     "typescript": "^3.0.1"
   },
   "bin": {
